Fix GM Tools button positioning with better spacing

--- a/src/App.css
+++ b/src/App.css
@@ -521,7 +521,7 @@
 }
 
 .gm-tools-toggle {
-  right: 180px;
+  right: 200px;
 }
 
 .overlay-close {
